--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Inter", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="C:\Users\rezab\Downloads\cvwebdesain\foto_reza.jpg" style="width:100%" alt="Avatar">
+          <img src="C:\Users\rezab\Downloads\cvwebdesain\image\foto_reza.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-white" onresize="50">
             <h2>Reza Bintang Pamungkas</h2>
           </div>
